# AlphaForest-Trader

./: .gitignore  build_dataset.py  main.py  pyproject.toml  readme.md  requirements.txt
config/: base.yaml
src/: config_loader.py
src/api/: daily_predictor.py
src/backtest/: signal_generator.py
src/features/: feature_builder.py
src/ingestion/: data_loader.py
src/labels/: target_builder.py
src/models/: optimizer.py  trainer.py
ui/: app.py
